docfix/remove jetty from README.md and sample.props.template